// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact renders correctly for non-touch device 1`] = `
<div
  className="contact"
>
  <div
    className="content"
  >
    <p>
      Are you interested in having your own portrait or have an enquiry?
    </p>
    <p>
      Feel free to send me an email:
    </p>
    <a
      href="mailto:joannelee133@gmail.com"
    >
      <i
        aria-hidden="true"
        className="fa fa-envelope"
      />
       joannelee133@gmail.com
    </a>
    <p>
      or drop me a call:
    </p>
    <a>
      <i
        aria-hidden="true"
        className="fa fa-phone"
      />
       +64 027 756 4652
    </a>
  </div>
</div>
`;

exports[`Contact renders correctly for touch device 1`] = `
<div
  className="contact"
>
  <div
    className="content"
  >
    <p>
      Are you interested in having your own portrait or have an enquiry?
    </p>
    <p>
      Feel free to send me an email:
    </p>
    <a
      href="mailto:joannelee133@gmail.com"
    >
      <i
        aria-hidden="true"
        className="fa fa-envelope"
      />
       joannelee133@gmail.com
    </a>
    <p>
      or drop me a call:
    </p>
    <a
      href="tel:+64277564652"
    >
      <i
        aria-hidden="true"
        className="fa fa-phone"
      />
       +64 027 756 4652
    </a>
  </div>
</div>
`;
